--- a/.github/workflows/content-web.yml
+++ b/.github/workflows/content-web.yml
@@ -16,10 +16,10 @@ on:
 # Environment variables are defined so that they can be used throughout the job definitions.
 env:
   imageRepository: 'content-web'
-  resourceGroupName: 'fabmedical-[SUFFIX]'
-  clusterName: 'fabmedical-[SUFFIX]'
-  containerRegistryName: 'fabmedical[SUFFIX]'
-  containerRegistry: 'fabmedical[SUFFIX].azurecr.io'
+  resourceGroupName: 'fabmedical-515000'
+  clusterName: 'fabmedical-515000'
+  containerRegistryName: 'fabmedical515000'
+  containerRegistry: 'fabmedical515000.azurecr.io'
   dockerfilePath: './content-web'
   tag: '${{ github.run_id  }}'
 
