--- a/.github/workflows/content-init.yml
+++ b/.github/workflows/content-init.yml
@@ -14,9 +14,9 @@ on:
 # Environment variables are defined so that they can be used throughout the job definitions.
 env:
   imageRepository: 'content-init'
-  resourceGroupName: 'Fabmedical-[SUFFIX]'
-  containerRegistryName: 'fabmedical[SUFFIX]'
-  containerRegistry: 'fabmedical[SUFFIX].azurecr.io'
+  resourceGroupName: 'Fabmedical-515000'
+  containerRegistryName: 'fabmedica515000'
+  containerRegistry: 'acr515000.azurecr.io'
   dockerfilePath: './content-init'
   tag: '${{ github.run_id  }}'
 
